// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot with groupId 1`] = `
Object {
  "graphql": Object {
    "query": "
query (
  $id: ID,
  $first: Int,
  $offset: Int,
  $sortBy: String,
  $order: String,
  $subscribed: Boolean,
  $autocomplete: String
) {
  group (id: $id) {
    id
    groupTopics(
  first: $first,
  offset: $offset,
  sortBy: $sortBy,
  order: $order,
  subscribed: $subscribed,
  autocomplete: $autocomplete
) {
  hasMore
  total
  items {
    id
    followersTotal
    isDefault
    isSubscribed
    newPostCount
    postsTotal
    visibility
    group {
      id
    }
    topic {
      id
      name
    }
  }
}

  }
}
",
    "variables": Object {
      "autocomplete": "a",
      "first": 7,
      "id": 765,
      "offset": 3,
      "order": "desc",
      "sortBy": "name",
      "subscribed": true,
    },
  },
  "meta": Object {
    "extractModel": "Group",
    "extractQueryResults": Object {
      "getItems": [Function],
    },
  },
  "type": "FETCH_GROUP_TOPICS",
}
`;

exports[`matches snapshot without groupId 1`] = `
Object {
  "graphql": Object {
    "query": "
query (
  $first: Int,
  $offset: Int,
  $sortBy: String,
  $order: String,
  $subscribed: Boolean,
  $autocomplete: String
) {
  groupTopics(
  first: $first,
  offset: $offset,
  sortBy: $sortBy,
  order: $order,
  subscribed: $subscribed,
  autocomplete: $autocomplete
) {
  hasMore
  total
  items {
    id
    followersTotal
    isDefault
    isSubscribed
    newPostCount
    postsTotal
    visibility
    group {
      id
    }
    topic {
      id
      name
    }
  }
}

}
",
    "variables": Object {
      "autocomplete": "",
      "first": 20,
      "id": null,
      "offset": 0,
      "order": "desc",
      "sortBy": undefined,
      "subscribed": false,
    },
  },
  "meta": Object {
    "extractModel": "GroupTopic",
    "extractQueryResults": Object {
      "getItems": [Function],
    },
  },
  "type": "FETCH_GROUP_TOPICS",
}
`;
